[package]
name = "cache"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Simmons"]
description = "A LFU & TTL cache implementation in Rust"
repository = "https://github.com/leonardosimmons/cache"
license = "MIT/Apache-2.0"

[dependencies]
# Data
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
linked-hash-map = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
